	gnumeric_plugin_loader_module_func_file_probe,
	gnumeric_plugin_loader_module_func_file_open,
	gnumeric_plugin_loader_module_func_file_save):
	s/FileOpener/GnumFileOpener/
	s/FileSaver/GnumFileSaver/

	* src/stf.c
	(stf_read_workbook, stf_write_workbook): Signature change
	(don't return gboolean).
	(stf_init): Adjusted to file i/o interface changes.

	src/xml-io.[ch]
	(gnumeric_xml_get_opener, xml_probe):
	s/FileOpener/GnumFileOpener/
	(gnumeric_xml_get_opener):
	s/FileSaver/GnumFileSaver/
	(gnumeric_xml_read_workbook, gnumeric_xml_write_workbook): Signature
	change (don't return gboolean).
	(xml_init): Adjusted to file i/o interface changes.

2001-05-20  Chema Celorio  <chema@celorio.com>

	* src/sheet-control-gui.c (set_acetate_coords): make sure the accetate
	honors the direction of the object.

2001-05-20  Chema Celorio  <chema@celorio.com>

	* src/sheet-object.c (sheet_object_init): initialize the so->direction
	to _UNKNOWN
	(sheet_object_direction_set): impl.
	(sheet_object_rubber_band_directly): impl a small convenience function
	to get the value of SO_CLASS(so)->rubber_band_directly

	* src/sheet-object-widget.c (sheet_widget_checkbox_construct_with_range):
	add a label argument to also optionaly specify a label
	(sheet_widget_checkbox_clone): when cloning a checkbox, copy it's value
	too
	add a ->label and rename ->entry to ->expresion in CheckboxConfigState
	(cb_checkbox_label_changed): impl.
	(sheet_widget_checkbox_user_config): add an entry for the label of
	the checkbutton
	(sheet_widget_checkbox_set_sheet): call _set_active when setting the
	sheet of a checkbox

	* src/sheet-object-impl.h: add the SheetObjectDirection enums
	add ->direction to SheetObject
	add ->rubber_band_directly to SheetObjectClass

	* src/sheet-object-graphic.c (sheet_object_graphic_read_xml): read
	the object's direction
	(sheet_object_graphic_write_xml): save the direction of the object
	(sheet_object_graphic_class_init): so->direction = TRUE